SIP-4452: Fixed a bug with dynamic modules not loading properly when logging in, and a layout bug.

--- a/saw-web/src/themes/base/app/_layout.scss
+++ b/saw-web/src/themes/base/app/_layout.scss
@@ -96,5 +96,6 @@ $header-bar-height: 64px;
 
 .render-content {
   width: 100%;
-  overflow: hidden;
+  height: 100%;
+  overflow-y: auto;
 }
